# fullstack-rag

./: README.md
backend/: pyproject.toml
backend/src/: .env  app.py
backend/src/utils/: openai_utils.py  qdrant.py  rag.py
frontend/: package.json  pnpm-lock.yaml
frontend/rag-app/: package-lock.json  package.json
frontend/rag-app/src/: App.css  App.js  QuestionForm.js  index.js
frontend/rag-app/src/app/: layout.tsx  page.tsx
